--- a/assets/css/invoice.css
+++ b/assets/css/invoice.css
@@ -84,6 +84,21 @@
 
 }
 
+.divFooter {
+    display: none;
+    /*background: #2db34a;*/
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+}
+@media print {
+    div.divFooter {
+        display: block;
+        position: fixed;
+        bottom: 0;
+    }
+}
 /*@media only screen and (max-width: 600px) {*/
 /*@media print {
     .invoice-box table tr.top table td{
